force-app/main/default/objects/Invoice_details__c/fields/Bank_IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>Bank_IFSC_Code__c</fullName>
    <label>Bank IFSC Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>