force-app/main/default/objects/Invoice_details__c/fields/Company_PAN__c.field-meta.xml
<CustomField>
    <fullName>Company_PAN__c</fullName>
    <label>Company PAN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>