force-app/main/default/objects/Invoice_details__c/fields/Company_TAN__c.field-meta.xml
<CustomField>
    <fullName>Company_TAN__c</fullName>
    <label>Company TAN</label>
    <length>80</length>
    <type>Text</type>
</CustomField>