force-app/main/default/objects/Invoice_details__c/fields/GST_Reg_No__c.field-meta.xml
<CustomField>
    <fullName>GST_Reg_No__c</fullName>
    <label>GST Reg. No</label>
    <length>80</length>
    <type>Text</type>
</CustomField>